--- a/package.json
+++ b/package.json
@@ -97,6 +97,7 @@
     "@commitlint/config-conventional": "^7.1.2",
     "@nestjs/testing": "^5.1.0",
     "@types/express": "^4.16.0",
+    "@types/http-proxy-middleware": "^0.19.0",
     "@types/jest": "^23.3.2",
     "@types/node": "^10.11.0",
     "@types/supertest": "^2.0.5",
@@ -106,8 +107,8 @@
     "cross-env": "^5.2.0",
     "cz-conventional-changelog": "^2.1.0",
     "husky": "^1.0.1",
-    "jest-config": "^23.6.0",
     "jest": "^23.6.0",
+    "jest-config": "^23.6.0",
     "lint-staged": "^8.0.0",
     "lodash.camelcase": "^4.3.0",
     "nodemon": "^1.18.3",
@@ -115,12 +116,12 @@
     "prompt": "^1.0.0",
     "replace-in-file": "^3.4.2",
     "rimraf": "^2.6.2",
+    "rollup": "^0.67.0",
     "rollup-plugin-commonjs": "^9.1.8",
     "rollup-plugin-json": "^3.1.0",
     "rollup-plugin-node-resolve": "^3.4.0",
     "rollup-plugin-sourcemaps": "^0.4.2",
     "rollup-plugin-typescript2": "^0.18.0",
-    "rollup": "^0.67.0",
     "semantic-release": "^15.9.16",
     "supertest": "^3.1.0",
     "travis-deploy-once": "^5.0.9",
@@ -128,15 +129,17 @@
     "ts-loader": "^4.4.2",
     "ts-node": "^7.0.1",
     "tsconfig-paths": "^3.5.0",
+    "tslint": "5.11.0",
     "tslint-config-prettier": "^1.15.0",
     "tslint-config-standard": "^8.0.1",
-    "tslint": "5.11.0",
     "typedoc": "^0.12.0",
     "typescript": "^3.0.3"
   },
   "dependencies": {
     "@nestjs/common": "^5.4.1",
     "@nestjs/core": "^5.4.1",
+    "express": "4.16.3",
+    "http-proxy-middleware": "^0.19.1",
     "reflect-metadata": "^0.1.12",
     "rxjs": "^6.3.3"
   }
